--- a/barry-portfolio/app/globals.css
+++ b/barry-portfolio/app/globals.css
@@ -56,5 +56,13 @@
 
 /* Smooth animations */
 * {
-  transition: color 0.2s ease, background-color 0.2s ease, border-color 0.2s ease;
+  transition: color 0.2s ease, background-color 0.2s ease,
+    border-color 0.2s ease;
+}
+
+.nav-shield {
+  @apply relative before:block before:sticky before:top-0 before:h-16 before:w-full before:z-[9];
+  &::before {
+    background-color: inherit;
+  }
 }
